add support for "rest binding" in multi-variable declaration
GROOVY-11964

for #1672